--- a/github/recommender/templates/index.html
+++ b/github/recommender/templates/index.html
@@ -1,7 +1,7 @@
 {%extends 'base.html'%}
 {%load static%}
 {%block headtag%}
-
+<meta name=”viewport” content=”width=device-width, initial-scale=1.0">
 <title>Homepage</title>
 <style>
 
