--- a/github/recommender/templates/base.html
+++ b/github/recommender/templates/base.html
@@ -40,14 +40,14 @@
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#">WebSiteName</a>
+            
           </div>
           <div class="collapse navbar-collapse" id="myNavbar">
             <ul class="nav navbar-nav">
-              <li class="active"><a href="#">Home</a></li>
-              <li><a href="#">Page 1</a></li>
-              <li><a href="#">Page 2</a></li>
-              <li><a href="#">Page 3</a></li>
+              <li class="active"><a href="{%url 'homepage'%}">Home</a></li>
+              <li><a href="{%url 'form_res'%}">Find Project </a></li>
+              <li><a href="{%url 'form_contributors_res'%}">Find Contributors</a></li>
+              <li><a href="#">Find Organisation</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
               <li><a href="#"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
