--- a/github/recommender/templates/form.html
+++ b/github/recommender/templates/form.html
@@ -6,36 +6,34 @@
 <style>
     @import url(https://fonts.googleapis.com/css?family=Montserrat:400,700);
 
-html{    background:url(http://thekitemap.com/images/feedback-img.jpg) no-repeat;
+html{    
   background-size: cover;
-  height:100%;
+  
 }
-h2.headertekst {
+h3.headertekst {
   text-align: center;
   font-weight: bold;
+  padding-bottom:20px;
 }
 #feedback-page{
 	text-align:center;
 }
 
 #form-main{
-	width:100%;
-	float:left;
-	padding-top:0px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	
 }
 
 #form-div {
-	background-color:rgba(72,72,72,0.4);
+	background-color:rgba(109, 106, 106, 0.185);
 	padding-left:35px;
 	padding-right:35px;
-	padding-top:35px;
-	padding-bottom:50px;
-	width: 450px;
-	float: left;
-	left: 50%;
-	position: absolute;
-  margin-top:30px;
-	margin-left: -260px;
+	box-shadow: 10px 10px 18px -10px rgba(0,0,0,0.75);
+	padding-bottom:40px;
+	width:450px;
+	
 
 }
 
@@ -125,17 +123,18 @@ input:focus, textarea:focus {
 	font-family: 'Montserrat', Arial, Helvetica, sans-serif;
 	float:left;
 	width: 100%;
-	border: #fbfbfb solid 4px;
+	border:none;
 	cursor:pointer;
 	background-color: #3498db;
 	color:black;
-	font-size:24px;
-	padding-top:22px;
-	padding-bottom:22px;
+	font-size:16px;
+	padding-top:10px;
+	padding-bottom:10px;
 	-webkit-transition: all 0.3s;
 	-moz-transition: all 0.3s;
 	transition: all 0.3s;
-  margin-top:-4px;
+  margin-top:10px;
+  border-radius: 50px;
   font-weight:700;
 }
 
@@ -149,16 +148,17 @@ input:focus, textarea:focus {
 	-ms-transition: .3s ease;
 	transition: .3s ease;
 }
-
+h4{
+	font-size:15px;
+}
 
 @media only screen and (max-width: 580px) {
+	#form-main{
+	display: flex;
+	justify-content: center;
+	}
 	#form-div{
-		left: 3%;
-		margin-right: 3%;
-		width: 88%;
-		margin-left: 0;
-		padding-left: 3%;
-		padding-right: 3%;
+		width:90%;
 	}
 }
 </style>
@@ -211,7 +211,7 @@ input:focus, textarea:focus {
             <div id="form-main">
              
                 <div id="form-div">
-                  <h2  class="headertekst"> Find Projects:</h2>
+                  <h3  class="headertekst"> Find Projects</h3>
                   <form action="{% url 'repo_rec' %}" method="POST" >
                     {% csrf_token %}
 					<p class="name">
@@ -241,7 +241,10 @@ input:focus, textarea:focus {
 						
 					  </p>
 					  <input type="hidden" value="" class="data" name="data"/>
-					  <input type="submit" value="SEND" id="button-blue"/>
+					  <div class="submit">
+						<input type="submit" value="SEND" id="button-blue"/>
+						<div class="ease"></div>
+					  </div>
 					  
 					
 
