--- a/github/recommender/templates/index.html
+++ b/github/recommender/templates/index.html
@@ -7,13 +7,17 @@
 
 .bg {
   
-  background-image: url("/static/images/bg.png");
+  
   height: 80%;
   /* min-height:100%; */
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
   background-attachment: fixed;
+  display: flex;
+  justify-content: center;
+  flex-direction: row;
+  align-items: center;
 }
 /* .centered {
   position: absolute;
@@ -43,11 +47,16 @@ html {
   font-family: "Lucida Sans", sans-serif;
 }
 
-.menu ul {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
+.menu  {
+ 
+  margin-left: auto;
+  margin-right: auto;
+  width:50%;
+  display: block;
+  z-index: 10;
+  
 }
+
 
 .menu li {
   padding: 8px;
@@ -67,7 +76,11 @@ html {
   box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
 }
 
-
+.image_vec img{
+  width:100%;
+  height: 100%;
+  object-fit: contain;
+}
 
 /*mobile phones: */
 [class*="col-"] {
@@ -76,53 +89,51 @@ html {
 
 @media only screen and (min-width: 600px) {
   /*tablets: */
-  .col-s-1 {width: 8.33%;}
-  .col-s-2 {width: 16.66%;}
-  .col-s-3 {width: 25%;}
-  .col-s-4 {width: 33.33%;}
-  .col-s-5 {width: 41.66%;}
-  .col-s-6 {width: 50%;}
-  .col-s-7 {width: 58.33%;}
-  .col-s-8 {width: 66.66%;}
-  .col-s-9 {width: 75%;}
-  .col-s-10 {width: 83.33%;}
-  .col-s-11 {width: 91.66%;}
-  .col-s-12 {width: 100%;}
+ 
 }
 @media only screen and (min-width: 768px) {
-  /*  desktop: */
-  .col-1 {width: 8.33%;}
-  .col-2 {width: 16.66%;}
-  .col-3 {width: 25%;}
-  .col-4 {width: 33.33%;}
-  .col-5 {width: 41.66%;}
-  .col-6 {width: 50%;}
-  .col-7 {width: 58.33%;}
-  .col-8 {width: 66.66%;}
-  .col-9 {width: 75%;}
-  .col-10 {width: 83.33%;}
-  .col-11 {width: 91.66%;}
-  .col-12 {width: 100%;}
+ 
+
+ 
 }
 
+@media only screen and (max-width: 768px){
+    
+  .bg{
+    flex-direction: column;
+  }
+  .menu{
+    width:100%;
+    text-align:center;
+    padding-bottom:100px;
+  }
+  .menu h1{
+    font-size:52px !important;
+  }
+}
 </style>
 
 {%endblock%}
 
 {%block content%}
 
-<div class="row">
+<div>
  
   
 
-  <div class="col-12 col-s-12">
+  <div >
     <div class="bg">
-      <div class="col-4 col-s-3 menu">
-        <ul>
-          <li><h2>Explore Github.<br></h2></li>
-          <li><h2>one stop plateform for all</h2> </li>
-          <li><h2>your Opensource needs...!</h2></li>
-        </ul>
+      <div class="col-sm-5">
+        <div class="menu">
+          <h1 style='font-weight: bold;font-size: 62px;'>EXPLORE</h1>
+        <h1 style='font-weight: bold;font-size: 62px;'>GITHUB</h1>
+        <p style='font-size: 16px;font-weight:600'>One stop platform </p>
+        <p style='font-size: 16px;font-weight:600'>for all your open source needs </p>
+        
+        </div>
+      </div>
+      <div  class='image_vec col-sm-12'>
+        <img src="{%static 'images/bg.png'%}">
       </div>
     </div>
     
