--- a/github/recommender/templates/base.html
+++ b/github/recommender/templates/base.html
@@ -51,12 +51,26 @@
             </ul>
             <ul class="nav navbar-nav navbar-right">
               <li><a href="#"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
-              <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+              <li><a href="{% url 'social:begin' 'github' %}"><span class="glyphicon glyphicon-log-in"></span> Login
+              </a>
+              </li>
             </ul>
           </div>
         </div>
       </nav>
+      
         {%block content%}
+        
+        {% if user.is_authenticated %}
+ 
+        <h1 style="text-align:center">Welcome {{user.username}}<br>To the Storehouse of projects</h1>
+         
+        {% else %}
+         
+        <h3>Your are not authenticated :/ </h3>
+         
+        {% endif %}
+
         {%endblock%}
         
     </body>
